--- a/infra/aws/package.json
+++ b/infra/aws/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"graphql_api": "workspace:*",
+		"db_migration": "workspace:*",
 		"esbuild": "^0.23.1"
 	}
 }
