Used prisma for the graphql resolvers. Added tests using vitest. Manually tested on local db

--- a/be/graphql_api/package.json
+++ b/be/graphql_api/package.json
@@ -4,18 +4,24 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "vitest run --coverage"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "5.19.1",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.7.0"
 	},
 	"devDependencies": {
 		"@types/aws-lambda": "^8.10.145",
 		"@types/node": "^20.16.2",
-		"typescript": "^5.5.4"
+		"@vitest/coverage-v8": "^2.0.5",
+		"prisma": "^5.19.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.4",
+		"vitest": "^2.0.5",
+		"vitest-mock-extended": "^2.0.2"
 	}
 }
