--- a/be/db_migration/package.json
+++ b/be/db_migration/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --env-file=.env -r ts-node/register src/index.ts",
+    "dev": "node --env-file=.env -r ts-node/register local_migration.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
