--- a/be/graphql_api/package.json
+++ b/be/graphql_api/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "node --env-file=.env ts-node/register ./local_resolver_test.ts",
+		"dev": "node --env-file=.env -r ts-node/register local_resolver_test.ts",
 		"test": "vitest run --coverage"
 	},
 	"keywords": [],
