--- a/be/db_migration/package.json
+++ b/be/db_migration/package.json
@@ -1,7 +1,7 @@
 {
   "name": "db_migration",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "A utility class for database migration",
   "main": "index.js",
   "scripts": {
     "dev": "node --env-file=.env -r ts-node/register local_migration.ts",
