--- a/fe/package.json
+++ b/fe/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fe",
-	"version": "0.0.1",
+	"version": "0.1.0",
+	"description": "The aaronjayoliver.com portfolio web application",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
