--- a/pkgs/shared_types/package.json
+++ b/pkgs/shared_types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shared_types",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "Common types for aaronjayoliver.com",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
