--- a/fe/package.json
+++ b/fe/package.json
@@ -36,5 +36,8 @@
 		"vite": "^5.4.4",
 		"vitest": "^2.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dayjs": "^1.11.13"
+	}
 }
