--- a/fe/package.json
+++ b/fe/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fe",
-	"version": "0.5.0",
+	"version": "1.0.0",
 	"description": "The aaronjayoliver.com portfolio web application",
 	"private": true,
 	"scripts": {
@@ -39,5 +39,7 @@
 	"type": "module",
 	"dependencies": {
 		"dayjs": "^1.11.13"
-	}
+	},
+	"author": "aaronjayoliver@gmail.com",
+	"license": "MIT"
 }
