--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aaronjayoliver.com",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "The root pnpm workspace directory for the aaronjayoliver.com portfolio project",
   "main": "index.js",
   "scripts": {
@@ -9,5 +9,5 @@
   },
   "keywords": [],
   "author": "aaronjayoliver@gmail.com",
-  "license": "ISC"
+  "license": "MIT"
 }
