--- a/pkgs/shared_types/package.json
+++ b/pkgs/shared_types/package.json
@@ -1,12 +1,12 @@
 {
   "name": "shared_types",
-  "version": "0.5.0",
+  "version": "1.0.0",
   "description": "Common types for aaronjayoliver.com",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "aaronjayoliver@gmail.com",
+  "license": "MIT"
 }
