--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aaronjayoliver.com",
   "version": "1.1.2",
   "description": "The root pnpm workspace directory for the aaronjayoliver.com portfolio project",
+  "private": "true",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
